fixed spacings

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -4,33 +4,37 @@ html {
   line-height: 1.5;
   font-size: 1.5rem;
   margin: 0;
-  }
+}
 
   *, *::before, *::after {
     box-sizing: inherit;
-  }
+}
+
+body {
+ margin: 0;
+}
 
 header {
   display: flex;
   flex-direction: row;
   align-items: center;
   background-color: #e2e2e2;
-  }
+}
 
 header h1 {
   padding-left: 1rem;
   padding-right: 1rem;
-  }
+}
 
 header img {
   max-width: 2rem;
   order: -1;
   padding-left: 1rem;
-  }
+}
 
 header p {
   font-size: 1.125rem;
-  }
+}
 
 nav ul {
   font-size: 1.125rem;
@@ -39,15 +43,15 @@ nav ul {
   flex-direction: row;
   justify-content: flex-end;
   margin: auto;
-  }
+}
 
 a:hover {
   color: #fff;
-  }
+}
 
 nav a {
   color: #007fd9;
   margin-right: 1rem;
   margin-left: 1rem;
   text-decoration: none;
-  }
+}
